# CUDA_X-RayEdgeDetection

./: .clangd  CMakeLists.txt  README.md  convolutions.cu  convolutions.cuh  filters.cu  filters.cuh  grayscale.cu  grayscale.cuh  kernels.cpp  kernels.hpp  main.cu  test.cu  test.cuh  utils.cpp  utils.hpp
